# multi-agent-system

./: .coveragerc  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CURSOR_MIGRATION.md  GITHUB_ISSUES_DRAFT.md  LICENSE  README.md  SECURITY.md  TESTING_SUMMARY.md  demo_sequential_processing.py  github_issues.md  production_readiness_issues.md  pyproject.toml  pytest-core.ini  pytest.ini  run_console_app.py  run_tests.py  start.bat  start.sh  start_mcp_servers.py  test_agent_execution.py  test_openai_simple.py  validate_ci_fix.py  validate_tests.py
.claude/agents/: agent-sync-coordinator.md  gitops-ci-specialist.md  product-manager-advisor.md  responsible-ai-code.md  sync-coordinator.md  system-architecture-reviewer.md  ux-ui-designer.md
.cursor/: rules.md
.cursor/rules/: agent-development.mdc  code-instructions.mdc  project-rules.mdc  security.mdc  testing.mdc
.githooks/: README.md  pre-commit
.github/: copilot-workspace.json  dependabot.yml  sync-instructions.md
.github/chatmodes/: architecture-reviewer.chatmode.md  code-reviewer.chatmode.md  gitops-ci-specialist.chatmode.md  product-manager.chatmode.md  responsible-ai-code.chatmode.md  sync-coordinator.chatmode.md  ux-designer.chatmode.md
.github/copilot-chat-modes/: product-manager.chatmode.md  ux-designer.chatmode.md
.github/instructions/: copilot-instructions.instructions.md  copilot-instructions.md
.github/workflows/: auto-merge.yml  branch-protection.yml  claude-code-review.yml  test.yml  (+5 more)
agent-persona/: income-agent-persona.md  intake-agent-persona.md
console_app/: .env.example  README.md  __init__.py
docs/: AGENT_BASED_DEVELOPMENT.md  AGENT_CONFIGURATIONS.md  LOGGING_SECURITY.md  adding-new-agents.md  agent-based-development.md  agent-patterns.md  agent-strategy.md  business-case.md  business-value.md  data-models.md  engineering-agent-approach.md  engineering-agent-learning.md  extension-guide.md  github-actions-quality.md  jobs-to-be-done.md  orchestration-patterns.md  synchronization-strategy.md
loan_processing/: __init__.py
scripts/: create_github_issues.py  run_console_app.py  run_tests.py  start_mcp_servers.py  validate_ci_fix.py
tests/: README.md  __init__.py  conftest.py  test_agent_registry.py  test_agents.py  test_base_orchestration.py  test_integration_scenarios.py  test_orchestration_engine.py  test_pattern_configurations.py  test_persona_loader.py  test_safe_evaluator.py  test_sequential_orchestration.py
(+143 files in other folders)
